app/assets/stylesheets/search_results.css
.search-results-page {
  position: fixed;
  top: 65px;
  left: 0;
  width: 100%;
  height: calc(100% - 65px);
  display: flex;
  z-index: -1;
}

.index-half {
  box-sizing: border-box;
  width: 60%;
  padding: 0 25px 15px 20px;
  max-height: 100%;
  overflow-y: scroll;

}

.map-half {
  width: 40%;
  position: relative;
}

#map-container {
  width: 100%;
  height: 100%;
}

.filter-form {
  font-size: 13px;
  margin-bottom: 20px;
}

.filter-form p {
  width: 15%;
}

.filter-form > div {
  padding-right: 50px
}

.input-els {
  width: 85%;
  margin: auto;
}



.roomtype-selector {

}
.checkboxes {
  margin: 25px;
  display: flex;
  justify-content: space-between;
}

.checkbox {
  width: 33%;
}

.form-slider {
  margin: 40px;
}

.form-input {
  display: flex;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #ccc;
  /*margin-bottom: 20px;*/
}

.max-price {
  position: absolute;
  right: -5px;
  top: 20px;
}

.min-price {
  position: absolute;
  left: 10px;
  top: 20px;
}

.spot-index {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: flex-start;

}

.spot-index-item {
  width: 49%;
  padding-bottom: 20px;
}

.image-item-div {
  width: 100%;
  height: 80%;
  position: relative;
}

.index-item-img {
  display: block;
  width: 100%;
  height: 100%;
}

.spot-price {
  position: absolute;
  left: 0;
  bottom: 35px;
  padding: 10px;
  background: rgb(65, 65, 65);
  color: white;
  font-size: 19px;
  opacity: .9;
}

.spot-name {
  padding-top: 15px;
  padding-left: 10px;
  color: rgb(72, 72, 72);
}

.spot-type-guests {
  padding-top: 5px;
  padding-left: 10px;
  color: rgb(127, 127, 127);
  font-size: 13px;
}

